--- a/style.css
+++ b/style.css
@@ -3,11 +3,41 @@ h1 {
     font-family: fantasy,sans-serif;
     text-transform: uppercase;
 }
+
+
+
+body {
+    background-color: beige;
+}
+
+h3 {
+    text-align: center;
+    font-size: 20px;
+}
+
+ol.ej {
+    text-align: left;
+    display: inline-block;
+    font-weight: bold;
+    
+}
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+.ing {
+    background-color: rgb(182, 92, 92);
+    color: white;
+    font-weight: bold;
+}
+
+
 .recipes {
     font-family:"Courier New", sans-serif;
     font-weight: bold;
-
 }
-body {
-    background-color: beige;
+.centerdiv{
+    text-align: center;
 }
